hphp/hack/test/typecheck/coeffects/strict-contexts/controlled_subtyping.php.legacy_decl.exp
File "controlled_subtyping.php", line 24, characters 19-27:
Invalid argument (Typing[4403])
  File "controlled_subtyping.php", line 4, characters 15-24:
  Expected a function that requires the capability set {ReadGlobals, System, WriteProperty}
  File "controlled_subtyping.php", line 23, characters 10-26:
  But got a function that requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "controlled_subtyping.php", line 25, characters 19-37:
Invalid argument (Typing[4403])
  File "controlled_subtyping.php", line 4, characters 15-24:
  Expected a function that requires the capability set {ReadGlobals, System, WriteProperty}
  File "controlled_subtyping.php", line 25, characters 22-29:
  But got a function that requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "controlled_subtyping.php", line 28, characters 32-62:
Invalid argument (Typing[4403])
  File "controlled_subtyping.php", line 18, characters 14-35:
  Expected a function that requires the capability set {AccessGlobals, WriteProperty}
  File "controlled_subtyping.php", line 27, characters 39-59:
  But got a function that requires the capability set {AccessGlobals, System, WriteProperty}
